# OCR_Solution

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: __init__.py  auth.py  routes.py  schemas.py  server.py
app/cli/: __init__.py  main.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  dao.py  models.py  ocr_worker.py  pdf_processor.py  pii.py  postprocess.py
app/dashboard/: index.html  package-lock.json  package.json  vite.config.js
app/dashboard/src/: App.jsx  index.css
docker/: init-db.sh
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_change_default_lang.py
paddleocr_models/official_models/korean_PP-OCRv5_mobile_rec/: README.md
