[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediview"
version = "0.1.0"
description = "의료 문서 OCR 시스템"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ocr-cli = "app.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.setuptools]
packages = ["app"]
